[tool.poetry]
name = "face-crawler"
version = "0.1.0"
description = ""
authors = ["Sungdon Kim <sehandev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
